--- a/BlogOn/Views/Shared/_Layout.cshtml
+++ b/BlogOn/Views/Shared/_Layout.cshtml
@@ -55,21 +55,8 @@
                 </div>
 
                 <div class="p-3">
-                    <h4>Archives</h4>
-                    <ol class="list-unstyled mb-0">
-                        <li><a href="#">March 2014</a></li>
-                        <li><a href="#">February 2014</a></li>
-                        <li><a href="#">January 2014</a></li>
-                        <li><a href="#">December 2013</a></li>
-                        <li><a href="#">November 2013</a></li>
-                        <li><a href="#">October 2013</a></li>
-                        <li><a href="#">September 2013</a></li>
-                        <li><a href="#">August 2013</a></li>
-                        <li><a href="#">July 2013</a></li>
-                        <li><a href="#">June 2013</a></li>
-                        <li><a href="#">May 2013</a></li>
-                        <li><a href="#">April 2013</a></li>
-                    </ol>
+                    <h4>Categories</h4>
+                    @await Component.InvokeAsync("CategoryList")
                 </div>
             </aside><!-- /.blog-sidebar -->
 
